--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/TPSMap.TPSMap
-EditorStartupMap=/Game/Level/TPSMap.TPSMap
+GameDefaultMap=/Game/StarterBundle/ModularSci_Int/Maps/SciFi_INT_EX1.SciFi_INT_EX1
+EditorStartupMap=/Game/StarterBundle/ModularSci_Int/Maps/SciFi_INT_EX1.SciFi_INT_EX1
 GlobalDefaultGameMode=/Game/BluePrint/BP_TPSGameMode.BP_TPSGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
